@@ -1,15 +1,15 @@
 /*
- * Copyright (c) 2022-2022 Huawei Technologies Co.,Ltd.
+ * Copyright (c) Huawei Technologies Co., Ltd. 2025-2025. All rights reserved.
  *
  * openGauss is licensed under Mulan PSL v2.
  * You can use this software according to the terms and conditions of the Mulan PSL v2.
  * You may obtain a copy of Mulan PSL v2 at:
  *
- *           http://license.coscl.org.cn/MulanPSL2
+ * http://license.coscl.org.cn/MulanPSL2
  *
  * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
  * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
- * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
+ * MERCHANTABILITY OR FITFOR A PARTICULAR PURPOSE.
  * See the Mulan PSL v2 for more details.
  */
 
@@ -17,19 +17,22 @@ package org.opengauss.datachecker.common.util;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.Logger;
+import org.opengauss.datachecker.common.exception.CheckingException;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.AccessDeniedException;
 import java.nio.file.Files;
-import java.nio.file.NotDirectoryException;
+import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * FileUtils
@@ -39,6 +42,7 @@ import java.util.stream.Collectors;
  * @since ：11
  */
 public class FileUtils {
+    private static final int SMALL_FILE_THRESHOLD = 8192; // 8KB
     private static final Logger log = LogUtils.getLogger();
 
     /**
@@ -120,20 +124,15 @@ public class FileUtils {
      *
      * @param fileDirectory fileDirectory
      * @return file paths
+     * @throws CheckingException CheckingException
      */
-    public static List<Path> loadDirectory(String fileDirectory) {
-        try {
-            final Path pathDirectory = Path.of(fileDirectory);
-            if (Files.isDirectory(pathDirectory)) {
-                return Files.list(pathDirectory)
-                            .collect(Collectors.toList());
-            } else {
-                throw new NotDirectoryException(fileDirectory);
-            }
+    public static List<Path> loadDirectory(String fileDirectory) throws CheckingException {
+        try (Stream<Path> stream = Files.list(Paths.get(fileDirectory))) {
+            return stream.collect(Collectors.toList());
         } catch (IOException e) {
-            log.error("file write error:", e);
+            log.error("fileDirectory is not directory:", e);
+            throw new CheckingException("can not load directory:" + fileDirectory);
         }
-        return new ArrayList<>(0);
     }
 
     /**
@@ -157,12 +156,38 @@ public class FileUtils {
      */
     public static String readFileContents(Path filePath) {
         try {
-            final byte[] bytes = Files.readAllBytes(filePath);
-            return new String(bytes, StandardCharsets.UTF_8);
+            if (Files.size(filePath) <= SMALL_FILE_THRESHOLD) {
+                return Files.readString(filePath);
+            }
+            return readLargeFile(filePath);
         } catch (IOException e) {
-            log.error("file read error:", e);
+            handleReadError(filePath, e);
+            return StringUtils.EMPTY;
         }
-        return StringUtils.EMPTY;
+    }
+
+    private static String readLargeFile(Path filePath) throws IOException {
+        try (BufferedReader reader = Files.newBufferedReader(filePath, StandardCharsets.UTF_8)) {
+            StringBuilder content = new StringBuilder();
+            char[] buffer = new char[SMALL_FILE_THRESHOLD];
+            int bytesRead;
+            while ((bytesRead = reader.read(buffer)) != -1) {
+                content.append(buffer, 0, bytesRead);
+            }
+            return content.toString();
+        }
+    }
+
+    private static void handleReadError(Path filePath, IOException e) {
+        String errorType;
+        if (e instanceof NoSuchFileException) {
+            errorType = "File Not Found";
+        } else if (e instanceof AccessDeniedException) {
+            errorType = "Permission Denied";
+        } else {
+            errorType = "Read Error";
+        }
+        log.error("[{}] Failed to read {}: {}", errorType, filePath, e.getMessage());
     }
 
     /**
